--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "commander": "^2.9.0",
     "express": "^4.13.4",
     "json-file-plus": "^3.2.0",
-    "package-json": "^2.3.1"
+    "package-json": "^2.3.1",
+    "react-component-explorer": "0.0.1"
   },
   "devDependencies": {
     "babel-core": "~5.8.12",
