--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "react-component-explorer": "0.0.1"
   },
   "devDependencies": {
-    "babel-core": "~5.8.12",
-    "babel-loader": "~5.3.0",
-    "babel-plugin-remove-proptypes": "~1.0.0",
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "~5.8.25",
     "css-loader": "~0.18.0",
     "file-loader": "^0.8.5",
